--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "config": "^3.3.11",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
